--- a/Express/EJS-Demo/package.json
+++ b/Express/EJS-Demo/package.json
@@ -4,11 +4,12 @@
   "description": "Rendering Templates and HTML",
   "main": "index.js",
   "scripts": {
-    "test": "code index.js"
+    "test": "node index.js"
   },
   "author": "Ben Mortimer",
   "license": "ISC",
   "dependencies": {
+    "ejs": "^2.6.2",
     "express": "^4.17.1"
   }
 }
